.sfpowerscripts/unzippedArtifacts/DXAk459A/Frameworks_sfpowerscripts_artifact/source/.sfpowerscripts/rLFAC_mdapi/objects/Trigger_Action__mdt.object
<CustomObject>
    
    <label>Trigger Action</label>
    
    <pluralLabel>Trigger Actions</pluralLabel>
    
    
<fields>
        
    <fullName>After_Delete__c</fullName>
        
    <description>Enter the name of the sObject you want to have this action execute on during the after delete context</description>
        
        
        
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the after delete context</inlineHelpText>
        
    <label>After Delete</label>
        
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
        
    <relationshipLabel>After Delete</relationshipLabel>
        
    <relationshipName>After_Delete_Actions</relationshipName>
        
        
    <type>MetadataRelationship</type>
        
        
</fields>
    <fields>
        
    <fullName>After_Insert__c</fullName>
        
    <description>Enter the name of the sObject you want to have this action execute on during the after insert context</description>
        
        
        
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the after insert context</inlineHelpText>
        
    <label>After Insert</label>
        
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
        
    <relationshipLabel>After Insert</relationshipLabel>
        
    <relationshipName>After_Insert_Actions</relationshipName>
        
        
    <type>MetadataRelationship</type>
        
        
</fields>
    <fields>
        
    <fullName>After_Undelete__c</fullName>
        
    <description>Enter the name of the sObject you want to have this action execute on during the after undelete context</description>
        
        
        
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the after undelete context</inlineHelpText>
        
    <label>After Undelete</label>
        
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
        
    <relationshipLabel>After Undelete</relationshipLabel>
        
    <relationshipName>After_Undelete_Actions</relationshipName>
        
        
    <type>MetadataRelationship</type>
        
        
</fields>
    <fields>
        
    <fullName>After_Update__c</fullName>
        
    <description>Enter the name of the sObject you want to have this action execute on during the after update context</description>
        
        
        
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the after update context</inlineHelpText>
        
    <label>After Update</label>
        
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
        
    <relationshipLabel>After Update</relationshipLabel>
        
    <relationshipName>After_Update_Actions</relationshipName>
        
        
    <type>MetadataRelationship</type>
        
        
</fields>
    <fields>
        
    <fullName>Apex_Class_Name__c</fullName>
        
    <description>Enter the name of the Apex Class which defines the action to be taken</description>
        
        
        
    <inlineHelpText>Enter the name of the Apex Class which defines the action to be taken</inlineHelpText>
        
    <label>Apex Class Name</label>
        
    <length>255</length>
        
    <required>true</required>
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Before_Delete__c</fullName>
        
    <description>Enter the name of the sObject you want to have this action execute on during the before delete context</description>
        
        
        
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the before delete context</inlineHelpText>
        
    <label>Before Delete</label>
        
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
        
    <relationshipLabel>Before Delete</relationshipLabel>
        
    <relationshipName>Before_Delete_Actions</relationshipName>
        
        
    <type>MetadataRelationship</type>
        
        
</fields>
    <fields>
        
    <fullName>Before_Insert__c</fullName>
        
    <description>Enter the name of the sObject you want to have this action execute on during the before insert context</description>
        
        
        
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the before insert context</inlineHelpText>
        
    <label>Before Insert</label>
        
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
        
    <relationshipLabel>Before Insert</relationshipLabel>
        
    <relationshipName>Before_Insert_Actions</relationshipName>
        
        
    <type>MetadataRelationship</type>
        
        
</fields>
    <fields>
        
    <fullName>Before_Update__c</fullName>
        
    <description>Enter the name of the sObject you want to have this action execute on during the before update context</description>
        
        
        
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the before update context</inlineHelpText>
        
    <label>Before Update</label>
        
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
        
    <relationshipLabel>Before Update</relationshipLabel>
        
    <relationshipName>Before_Update_Actions</relationshipName>
        
        
    <type>MetadataRelationship</type>
        
        
</fields>
    <fields>
        
    <fullName>Bypass_Execution__c</fullName>
        
    <defaultValue>false</defaultValue>
        
    <description>Set this to true to bypass this Trigger Action from being called</description>
        
        
        
    <inlineHelpText>Set this to true to bypass this Trigger Action from being called</inlineHelpText>
        
    <label>Bypass Execution</label>
        
    <type>Checkbox</type>
        
</fields>
    <fields>
        
    <fullName>Bypass_Permission__c</fullName>
        
    <description>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will be bypassed if the running user has the custom permission identified.</description>
        
        
        
    <inlineHelpText>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will be bypassed if the running user has the custom permission identified.</inlineHelpText>
        
    <label>Bypass Permission</label>
        
    <length>255</length>
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Description__c</fullName>
        
        
        
    <label>Description</label>
        
    <length>32768</length>
        
    <type>LongTextArea</type>
        
        
</fields>
    <fields>
        
    <fullName>Flow_Name__c</fullName>
        
    <description>Enter the name of a flow you would like to execute. The flow name specified must have two resources called &quot;newList&quot; and &quot;oldList&quot; which are collections of sObjects to work properly.</description>
        
        
        
    <inlineHelpText>Enter the name of a flow you would like to execute. The flow name specified must have two resources called &quot;newList&quot; and &quot;oldList&quot; which are collections of sObjects to work properly.</inlineHelpText>
        
    <label>Flow Name</label>
        
    <length>255</length>
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Order__c</fullName>
        
        
        
    <label>Order</label>
        
    <precision>18</precision>
        
    <required>true</required>
        
    <scale>3</scale>
        
    <type>Number</type>
        
        
</fields>
    <fields>
        
    <fullName>Required_Permission__c</fullName>
        
    <description>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will  only execute if the running user has the custom permission identified.</description>
        
        
        
    <inlineHelpText>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will  only execute if the running user has the custom permission identified.</inlineHelpText>
        
    <label>Required Permission</label>
        
    <length>255</length>
        
        
    <type>Text</type>
        
        
</fields>
    <validationRules>
        
    <fullName>Description_is_Required</fullName>
        
    <active>true</active>
        
    <description>You must enter a description for this Trigger Action.</description>
        
    <errorConditionFormula>ISBLANK(Description__c)</errorConditionFormula>
        
    <errorDisplayField>Description__c</errorDisplayField>
        
    <errorMessage>You must enter a description for this Trigger Action.</errorMessage>
        
</validationRules>
    <validationRules>
        
    <fullName>Flow_Name</fullName>
        
    <active>true</active>
        
    <errorConditionFormula>NOT(ISBLANK( Flow_Name__c ))  &amp;&amp;  Apex_Class_Name__c != &quot;TriggerActionFlow&quot;</errorConditionFormula>
        
    <errorMessage>The Apex Class Name must equal &quot;TriggerActionFlow&quot; if the Flow Name is populated.</errorMessage>
        
</validationRules>
    <validationRules>
        
    <fullName>Must_choose_a_context</fullName>
        
    <active>true</active>
        
    <description>Throws an error if the user does not choose at least one context</description>
        
    <errorConditionFormula>ISBLANK(Before_Insert__c)
&amp;&amp;
ISBLANK(After_Insert__c)
&amp;&amp;
ISBLANK(Before_Update__c)
&amp;&amp;
ISBLANK(After_Update__c)
&amp;&amp;
ISBLANK(Before_Delete__c)
&amp;&amp;
ISBLANK(After_Delete__c)
&amp;&amp;
ISBLANK(After_Undelete__c)</errorConditionFormula>
        
    <errorMessage>You must select at least one context</errorMessage>
        
</validationRules>
    <validationRules>
        
    <fullName>Only_One_Context</fullName>
        
    <active>true</active>
        
    <description>Throws an error if the user selects more than one context.</description>
        
    <errorConditionFormula>(NOT(ISBLANK(Before_Insert__c)) &amp;&amp;
	( 
					NOT(ISBLANK(After_Insert__c)) || 
					NOT(ISBLANK(Before_Update__c)) || 
					NOT(ISBLANK(After_Update__c)) || 
					NOT(ISBLANK(Before_Delete__c)) || 
					NOT(ISBLANK(After_Delete__c)) || 
					NOT(ISBLANK(After_Undelete__c))
))
||
 (NOT(ISBLANK(After_Insert__c)) &amp;&amp;
	( 
					NOT(ISBLANK(Before_Insert__c)) ||
					NOT(ISBLANK(Before_Update__c)) || 
					NOT(ISBLANK(After_Update__c)) || 
					NOT(ISBLANK(Before_Delete__c)) || 
					NOT(ISBLANK(After_Delete__c)) || 
					NOT(ISBLANK(After_Undelete__c))
))
||
 (NOT(ISBLANK(Before_Update__c)) &amp;&amp;
	( 
					NOT(ISBLANK(Before_Insert__c)) ||
					NOT(ISBLANK(After_Insert__c)) || 
					NOT(ISBLANK(After_Update__c)) || 
					NOT(ISBLANK(Before_Delete__c)) || 
					NOT(ISBLANK(After_Delete__c)) || 
					NOT(ISBLANK(After_Undelete__c))
))
||
 (NOT(ISBLANK(After_Update__c)) &amp;&amp;
	( 
					NOT(ISBLANK(Before_Insert__c)) ||
					NOT(ISBLANK(After_Insert__c)) || 
					NOT(ISBLANK(Before_Update__c)) || 
					NOT(ISBLANK(Before_Delete__c)) || 
					NOT(ISBLANK(After_Delete__c)) || 
					NOT(ISBLANK(After_Undelete__c))
))
||
 (NOT(ISBLANK(After_Update__c)) &amp;&amp;
	( 
					NOT(ISBLANK(Before_Insert__c)) ||
					NOT(ISBLANK(After_Insert__c)) || 
					NOT(ISBLANK(Before_Update__c)) || 
					NOT(ISBLANK(Before_Delete__c)) || 
					NOT(ISBLANK(After_Delete__c)) || 
					NOT(ISBLANK(After_Undelete__c))
))
||
 (NOT(ISBLANK(Before_Delete__c)) &amp;&amp;
	( 
					NOT(ISBLANK(Before_Insert__c)) ||
					NOT(ISBLANK(After_Insert__c)) || 
					NOT(ISBLANK(Before_Update__c)) || 
					NOT(ISBLANK(After_Update__c)) || 
					NOT(ISBLANK(After_Delete__c)) || 
					NOT(ISBLANK(After_Undelete__c))
))
||
 (NOT(ISBLANK(After_Delete__c)) &amp;&amp;
	( 
					NOT(ISBLANK(Before_Insert__c)) ||
					NOT(ISBLANK(After_Insert__c)) || 
					NOT(ISBLANK(Before_Update__c)) || 
					NOT(ISBLANK(After_Update__c)) || 
					NOT(ISBLANK(Before_Delete__c)) || 
					NOT(ISBLANK(After_Undelete__c))
))
||
 (NOT(ISBLANK(After_Undelete__c)) &amp;&amp;
	( 
					NOT(ISBLANK(Before_Insert__c)) ||
					NOT(ISBLANK(After_Insert__c)) || 
					NOT(ISBLANK(Before_Update__c)) || 
					NOT(ISBLANK(After_Update__c)) || 
					NOT(ISBLANK(Before_Delete__c)) || 
					NOT(ISBLANK(After_Delete__c))
))</errorConditionFormula>
        
    <errorMessage>You can only choose one context</errorMessage>
        
</validationRules>
</CustomObject>